fixed crash when no image url. changes to support master-detail and dialog fragment player.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "23.0.0 rc1"
+    buildToolsVersion '22.0.1'
     defaultConfig {
         applicationId "com.spotify.gil.spotifystreamer"
         minSdkVersion 14
@@ -26,10 +26,11 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    // Uses this to create RESTful Requests
+    // Uses this to create HTTP connections
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    // Uses this to create RESTful Requests
     compile 'com.squareup.okhttp:okhttp:2.2.0'
-    // Uses this to create HTTP connections
+    compile 'com.android.support:support-v4:22.2.0'
 }
