--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.PlayerActivity"
+            android:label="@string/title_activity_player"
+            android:parentActivityName=".activity.ArtistTracksActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.ArtistTracksActivity" />
+        </activity>
+        <activity
+            android:name=".activity.ArtistListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,20 +32,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.TracksActivity"
+            android:name=".activity.ArtistTracksActivity"
             android:label="@string/title_activity_artist"
-            android:parentActivityName=".activity.MainActivity" >
+            android:parentActivityName=".activity.ArtistListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activity.MainActivity" />
-        </activity>
-        <activity
-            android:name=".activity.PlayerActivity"
-            android:label="@string/title_activity_player"
-            android:parentActivityName=".activity.TracksActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activity.TracksActivity" />
+                android:value=".activity.ArtistListActivity" />
         </activity>
     </application>
 
